--- a/index.html
+++ b/index.html
@@ -6,168 +6,158 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-html, body {
-  height: 100%;
-  margin: 0;
-}
-
-body {
+/* ===== BASE ===== */
+html, body { height:100%; margin:0; }
+body{
   font-family: Arial, sans-serif;
-  background: linear-gradient(180deg, #eef1f4, #f4f6f8);
-  padding: 20px;
-  color: #000;
+  background:
+    radial-gradient(circle at top left, #e3f2fd, transparent 40%),
+    radial-gradient(circle at bottom right, #fce4ec, transparent 40%),
+    linear-gradient(180deg, #eef1f4, #f4f6f8);
+  padding:20px;
 }
 
-/* ===== CONTAINER ===== */
-.container {
-  max-width: 420px;
-  margin: auto;
-  background: #ffffff;
-  padding: 16px 20px 20px;
-  border-radius: 8px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.08);
-  position: relative;
+/* ===== CARD ===== */
+.container{
+  max-width:420px;
+  margin:auto;
+  background:#fff;
+  padding:16px 20px 20px;
+  border-radius:10px;
+  box-shadow:0 8px 20px rgba(0,0,0,.08);
+  position:relative;
+  animation:fade .3s ease;
+}
+.container::before{
+  content:"";
+  position:absolute;
+  top:0; left:0;
+  height:4px; width:100%;
+  background:linear-gradient(90deg,#1e88e5,#42a5f5);
+  border-radius:10px 10px 0 0;
 }
 
-/* SUCCESS BOX */
-.success-container {
-  max-width: 520px;
+@keyframes fade{
+  from{opacity:0; transform:translateY(8px)}
+  to{opacity:1; transform:none}
 }
 
 /* ===== TEXT ===== */
-h2 {
-  text-align: center;
-  margin-top: 0;
-  margin-bottom: 8px;
+h2{ text-align:center; margin:6px 0 12px }
+label{ font-size:12px; color:#555; font-weight:bold }
+.req{ color:#e53935 }
+
+/* ===== INPUT ===== */
+.input-wrap{ position:relative }
+.input-wrap span{
+  position:absolute;
+  left:10px; top:50%;
+  transform:translateY(-50%);
+  opacity:.6;
+}
+input{
+  width:100%;
+  padding:10px 10px 10px 30px;
+  margin:4px 0;
+  border:1px solid #ccc;
+  border-radius:6px;
+  font-size:14px;
+  box-sizing:border-box;
+}
+input:focus{
+  border-color:#1e88e5;
+  box-shadow:0 0 0 2px rgba(30,136,229,.15);
+  outline:none;
+}
+input.error{
+  border-color:#e53935;
+  background:#fff5f5;
 }
 
-label { font-weight: bold; }
-
-input[type="text"],
-input[type="tel"] {
-  width: 100%;
-  padding: 10px;
-  margin: 5px 0 4px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-sizing: border-box;
-  text-transform: uppercase;
+.errorText{
+  font-size:11px;
+  color:#e53935;
+  display:none;
+  margin-bottom:6px;
 }
 
-::placeholder {
-  text-transform: none;
-  color: #999;
-}
-
-/* ===== ERROR ===== */
-input.error {
-  border-color: #e53935;
-  background: #fff5f5;
-}
-
-.errorText {
-  font-size: 12px;
-  color: #e53935;
-  margin-bottom: 8px;
-  display: none;
+/* ===== SECTION ===== */
+.section-title{
+  margin-top:12px;
+  font-size:13px;
+  font-weight:bold;
+  color:#1e88e5;
+  border-left:3px solid #1e88e5;
+  padding-left:8px;
 }
 
 /* ===== CONSENT ===== */
-.consent {
-  font-size: 13px;
-  margin: 10px 0;
-  color: #555;
+.consent{
+  font-size:12px;
+  color:#555;
+  margin:10px 0;
 }
 
 /* ===== BUTTON ===== */
-button {
-  width: 100%;
-  padding: 12px;
-  background: #1e88e5;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-  opacity: 0.6;
-  cursor: not-allowed;
+button{
+  width:100%;
+  padding:12px;
+  border:none;
+  border-radius:6px;
+  font-size:16px;
+  color:#fff;
+  background:#90caf9;
+  cursor:not-allowed;
+  transition:.2s;
 }
-button.enabled {
-  opacity: 1;
-  cursor: pointer;
+button.enabled{
+  background:linear-gradient(135deg,#1e88e5,#42a5f5);
+  cursor:pointer;
 }
-
-/* ===== HELPER ===== */
-.helper {
-  font-size: 12px;
-  color: #777;
-  margin-top: 6px;
-  text-align: center;
+button.enabled:hover{
+  transform:translateY(-1px);
+  box-shadow:0 6px 12px rgba(30,136,229,.25);
 }
 
 /* ===== SUCCESS ===== */
-.successIcon {
-  margin: 15px auto;
-  width: 70px;
+.successIcon{
+  width:70px;
+  margin:14px auto;
+  animation:pop .4s ease;
 }
-.successIcon svg { width: 100%; }
-
-.ref {
-  font-weight: bold;
-  text-align: center;
-  margin: 6px 0 12px;
-  font-size: 14px;
+@keyframes pop{
+  from{transform:scale(.6);opacity:0}
+  to{transform:scale(1);opacity:1}
 }
-
-.summary {
-  font-size: 14px;
-  margin-top: 10px;
-  line-height: 1.6;
-  text-transform: uppercase;
+.ref{
+  background:#e3f2fd;
+  border:1px dashed #1e88e5;
+  padding:8px;
+  border-radius:6px;
+  text-align:center;
+  font-weight:bold;
+  margin-bottom:10px;
 }
-
-/* WATERMARK */
-.watermark {
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotate(-25deg);
-  font-size: 48px;
-  color: rgba(0,0,0,0.06);
-  font-weight: bold;
-  display: none;
-  pointer-events: none;
-}
-
-/* ===== MAINTENANCE ===== */
-.maintenance {
-  max-width: 420px;
-  margin: auto;
-  background: #ffffff;
-  padding: 25px 20px;
-  border-radius: 8px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.08);
-  text-align: center;
-}
-.maintenance p {
-  font-size: 13px;
-  color: #555;
+.summary div{
+  background:#fafafa;
+  border:1px solid #eee;
+  padding:6px 8px;
+  border-radius:5px;
+  margin-bottom:5px;
 }
 
 /* ===== FOOTER ===== */
-.footer {
-  margin-top: 25px;
-  text-align: center;
-  font-size: 11px;
-  color: #888;
+.footer{
+  max-width:420px;
+  margin:30px auto 0;
+  font-size:11px;
+  color:#888;
+  text-align:center;
 }
-.divider {
-  height: 2px;
-  background: linear-gradient(to right, transparent, #1e88e5, transparent);
-  margin-bottom: 10px;
-}
-.footer a {
-  color: #888;
-  text-decoration: none;
+.divider{
+  height:2px;
+  background:linear-gradient(to right,transparent,#1e88e5,transparent);
+  margin-bottom:8px;
 }
 </style>
 </head>
@@ -175,195 +165,133 @@ button.enabled {
 <body>
 
 <script>
-/* ===== ON / OFF MODE ===== */
-var FORM_ENABLED = true; // true = ON | false = OFF
+var FORM_ENABLED = true;
 </script>
 
-<!-- MAINTENANCE -->
-<div class="maintenance" id="maintenanceBox" style="display:none;">
-  <h2>🚧 Temporarily Unavailable</h2>
-  <p>
-    This submission form is currently unavailable.<br><br>
-    Please contact the administrator.
-  </p>
-</div>
-
-<!-- FORM -->
 <div class="container" id="formBox">
-  <h2>📄 AGENCY CONTACT INFO SUBMISSION</h2>
+<h2>📄 AGENCY CONTACT INFO</h2>
 
-  <form onsubmit="return submitForm();">
+<form onsubmit="return submitForm();">
 
-    <label>Agency Name (Mandatory)</label>
-    <input type="text" id="agency" placeholder="Example: ABC DEBT SDN BHD">
-    <div class="errorText" id="err_agency">This field is required</div>
+<div class="section-title">Agency</div>
+<label>Agency Name <span class="req">*</span></label>
+<div class="input-wrap">
+<span>🏢</span>
+<input id="agency">
+</div>
+<div class="errorText" id="err_agency">Required</div>
 
-    <label>PIC Name 1 (Mandatory)</label>
-    <input type="text" id="pic1" placeholder="Example: MR JOHN DOE">
-    <div class="errorText" id="err_pic1">This field is required</div>
+<label>PIC Name 1 <span class="req">*</span></label>
+<div class="input-wrap">
+<span>👤</span>
+<input id="pic1">
+</div>
+<div class="errorText" id="err_pic1">Required</div>
 
-    <label>PIC Name 2 (Optional)</label>
-    <input type="text" id="pic2" placeholder="Example: MISS JANE DOE">
-
-    <label>Contact No (Mandatory)</label>
-    <input type="tel" id="contact1" placeholder="Example: 0123456789" oninput="formatPhone(this)">
-    <div class="errorText" id="err_contact1">This field is required</div>
-
-    <label>Contact No (Optional)</label>
-    <input type="tel" id="contact2" placeholder="Example: 0123456789" oninput="formatPhone(this)">
-
-    <label>WhatsApp No (Mandatory)</label>
-    <input type="tel" id="whatsapp" placeholder="Example: 0123456789" oninput="formatPhone(this)">
-    <div class="errorText" id="err_whatsapp">This field is required</div>
-
-    <div class="consent">
-      <input type="checkbox" id="consent" onclick="updateState()">
-      I confirm that the information provided is accurate and consent to its use
-      for official communication purposes.
-    </div>
-
-    <button type="submit" id="submitBtn">Submit</button>
-    <div class="helper" id="helperText"></div>
-  </form>
+<label>PIC Name 2</label>
+<div class="input-wrap">
+<span>👤</span>
+<input id="pic2">
 </div>
 
-<!-- SUCCESS -->
-<div class="container success-container" id="successBox" style="display:none;">
-  <div class="watermark" id="watermark">SUBMITTED</div>
+<div class="section-title">Contact</div>
+<label>Contact No <span class="req">*</span></label>
+<div class="input-wrap">
+<span>📞</span>
+<input id="contact1" oninput="formatPhone(this)">
+</div>
+<div class="errorText" id="err_contact1">Required</div>
 
-  <div class="successIcon">
-    <svg viewBox="0 0 24 24" fill="none">
-      <circle cx="12" cy="12" r="10" stroke="#1e88e5" stroke-width="2"/>
-      <path d="M7 12l3 3 7-7" stroke="#1e88e5" stroke-width="2"/>
-    </svg>
-  </div>
+<label>WhatsApp No <span class="req">*</span></label>
+<div class="input-wrap">
+<span>💬</span>
+<input id="whatsapp" oninput="formatPhone(this)">
+</div>
+<div class="errorText" id="err_whatsapp">Required</div>
 
-  <h2>Submission Successful</h2>
-  <div class="ref" id="refDisplay"></div>
-  <div class="summary" id="summaryBox"></div>
-
-  <div class="consent" style="margin-top:15px;">
-    ✔ CONSENT CONFIRMED FOR OFFICIAL COMMUNICATION PURPOSES.
-  </div>
-
-  <p style="text-align:center;font-size:13px;">
-    You may safely close this page.
-  </p>
+<div class="consent">
+<input type="checkbox" id="consent" onclick="updateState()">
+I confirm the information is accurate for official communication.
 </div>
 
-<!-- FOOTER -->
+<button id="submitBtn">Submit</button>
+
+</form>
+</div>
+
+<div class="container" id="successBox" style="display:none">
+<div class="successIcon">
+<svg viewBox="0 0 24 24" fill="none">
+<circle cx="12" cy="12" r="10" stroke="#1e88e5" stroke-width="2"/>
+<path d="M7 12l3 3 7-7" stroke="#1e88e5" stroke-width="2"/>
+</svg>
+</div>
+
+<h2>Submission Successful</h2>
+<div class="ref" id="refDisplay"></div>
+<div class="summary" id="summaryBox"></div>
+
+<p style="text-align:center;font-size:13px">You may close this page.</p>
+</div>
+
 <div class="footer">
-  <div class="divider"></div>
-  <div id="trademark"></div>
-  <div>
-    Information submitted is collected solely for communication and
-    administrative record purposes.
-  </div>
+<div class="divider"></div>
+© <span id="yr"></span> sczpnet.org · Form Version AGY-CI-v1.0
 </div>
 
 <script>
-/* ===== PAGE LOAD ===== */
-window.onload = function () {
-  if (!FORM_ENABLED) {
-    formBox.style.display = "none";
-    successBox.style.display = "none";
-    maintenanceBox.style.display = "block";
-  }
-};
-
-/* ===== VALIDATION & SUBMIT ===== */
-const mandatoryFields = [
-  { id: "agency", err: "err_agency" },
-  { id: "pic1", err: "err_pic1" },
-  { id: "contact1", err: "err_contact1" },
-  { id: "whatsapp", err: "err_whatsapp" }
+const mandatory=[
+{id:"agency",err:"err_agency"},
+{id:"pic1",err:"err_pic1"},
+{id:"contact1",err:"err_contact1"},
+{id:"whatsapp",err:"err_whatsapp"}
 ];
 
-function formatPhone(el) {
-  let v = el.value.replace(/\D/g,'');
-  if (v.startsWith("0")) v = "6" + v;
-  if (!v.startsWith("6")) v = "6" + v;
-  el.value = v;
+function formatPhone(el){
+let v=el.value.replace(/\D/g,'');
+if(v.startsWith("0"))v="6"+v;
+if(!v.startsWith("6"))v="6"+v;
+el.value=v;
 }
 
-function generateRef() {
-  const d = new Date();
-  return "AGY-" +
-    d.getFullYear() +
-    String(d.getMonth()+1).padStart(2,"0") +
-    String(d.getDate()).padStart(2,"0") + "-" +
-    String(d.getHours()).padStart(2,"0") +
-    String(d.getMinutes()).padStart(2,"0") +
-    String(d.getSeconds()).padStart(2,"0");
+function updateState(){
+let ok=true;
+mandatory.forEach(f=>{
+const i=document.getElementById(f.id);
+const e=document.getElementById(f.err);
+if(!i.value.trim()){
+ok=false; i.classList.add("error"); e.style.display="block";
+}else{
+i.classList.remove("error"); e.style.display="none";
+}
+});
+submitBtn.disabled=!ok||!consent.checked;
+submitBtn.classList.toggle("enabled",!submitBtn.disabled);
 }
 
-function updateState() {
-  let ok = true;
-  mandatoryFields.forEach(f => {
-    const i = document.getElementById(f.id);
-    const e = document.getElementById(f.err);
-    if (!i.value.trim()) {
-      ok = false;
-      i.classList.add("error");
-      e.style.display = "block";
-    } else {
-      i.classList.remove("error");
-      e.style.display = "none";
-    }
-  });
+mandatory.forEach(f=>{
+document.getElementById(f.id).addEventListener("input",updateState);
+});
 
-  submitBtn.disabled = !ok || !consent.checked;
-  submitBtn.classList.toggle("enabled", !submitBtn.disabled);
-  helperText.innerText = !ok
-    ? "Please complete all mandatory fields."
-    : !consent.checked
-    ? "Please confirm consent to proceed."
-    : "";
+function submitForm(){
+updateState();
+if(submitBtn.disabled) return false;
+
+const ref="AGY-"+Date.now();
+formBox.style.display="none";
+successBox.style.display="block";
+
+refDisplay.innerText="REFERENCE: "+ref;
+summaryBox.innerHTML=
+`<div><b>AGENCY:</b> ${agency.value}</div>
+ <div><b>PIC:</b> ${pic1.value}</div>
+ <div><b>CONTACT:</b> ${contact1.value}</div>
+ <div><b>WHATSAPP:</b> ${whatsapp.value}</div>`;
+
+return false;
 }
 
-mandatoryFields.forEach(f =>
-  document.getElementById(f.id).addEventListener("input", updateState)
-);
-
-function submitForm() {
-  updateState();
-  if (submitBtn.disabled) return false;
-
-  const ref = generateRef();
-  const data = new URLSearchParams();
-  data.append("ref", ref);
-  data.append("agency", agency.value.toUpperCase());
-  data.append("pic1", pic1.value.toUpperCase());
-  data.append("pic2", pic2.value.toUpperCase());
-  data.append("contact1", contact1.value);
-  data.append("contact2", contact2.value);
-  data.append("whatsapp", whatsapp.value);
-  data.append("consent", "YES");
-
-  fetch("https://script.google.com/macros/s/AKfycbxOQSUWLw2C0BP5FHu3wBsHw1irrB-qwGMRlzO_xtTMqrnYPcUQlV4wkquytKpwtQ/exec", { method: "POST", body: data });
-
-  formBox.style.display = "none";
-  successBox.style.display = "block";
-  watermark.style.display = "block";
-
-  refDisplay.innerText = "REFERENCE NO: " + ref;
-  summaryBox.innerHTML =
-    `<div><b>AGENCY:</b> ${agency.value.toUpperCase()}</div>
-     <div><b>PIC NAME 1:</b> ${pic1.value.toUpperCase()}</div>
-     ${pic2.value ? `<div><b>PIC NAME 2:</b> ${pic2.value.toUpperCase()}</div>` : ""}
-     <div><b>CONTACT (MANDATORY):</b> ${contact1.value}</div>
-     ${contact2.value ? `<div><b>CONTACT (OPTIONAL):</b> ${contact2.value}</div>` : ""}
-     <div><b>WHATSAPP NO:</b> ${whatsapp.value}</div>`;
-
-  return false;
-}
-
-/* FOOTER */
-(function(){
-  const year = new Date().getFullYear();
-  trademark.innerHTML =
-    `© ${year} <a href="https://sczpnet.org" target="_blank">sczpnet.org</a> · For Authorized Agency Use`;
-})();
+yr.innerText=new Date().getFullYear();
 </script>
 
 </body>
